--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,24 +1,11 @@
-FROM node:18-alpine as build
-
+FROM node:20-alpine AS build
 WORKDIR /app
-
 COPY package*.json ./
-
-RUN npm install
-
-# Set environment variable to use legacy OpenSSL behavior
-ENV NODE_OPTIONS=--openssl-legacy-provider
-
+RUN npm ci
 COPY . .
-
 RUN npm run build
 
 FROM nginx:alpine
-
-COPY --from=build /app/build /usr/share/nginx/html
-
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
+COPY --from=build /app/dist/ /usr/share/nginx/html
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
