--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,11 +1,14 @@
+# Stage 1: Build
 FROM node:20-alpine AS build
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci
+COPY package*.json ./        # copies package.json and package-lock.json
+RUN npm install              # use npm install instead of npm ci
 COPY . .
 RUN npm run build
 
+# Stage 2: Serve with Nginx
 FROM nginx:alpine
-COPY --from=build /app/dist/ /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
 
